# psuprinter

./: LICENSE  README.md  __main__.py  lp2pdf.sh  main.py  psuprinter.py  pyproject.toml
psuprinter/: __init__.py  __main__.py  psuprinter.py  text2pdf.py
